--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "standard-version": "^8.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0 || ^16.0.0"
+    "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
